Fix z-index for scroll-to-top-button

--- a/embed.css
+++ b/embed.css
@@ -166,6 +166,7 @@ h1 {
   cursor: pointer;
   opacity: .3;
   transition: background-color 0.3s, transform 1s;
+  z-index: 9999;
 }
 
 /* Hover effect for scroll-to-top button */
